# Hive

./: .gitignore  LICENSE  README.md  SECURITY.md  build_check.bat  build_check.ps1  run-hive.bat  run_verify.bat  todo.md  todo_March52026.md  todo_March52026_final.md
.github/workflows/: auto-release.yml  ci.yml  pages.yml  release.yml
.hive/workflows/: example.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specify/: init-options.json
.specify/memory/: constitution.md
docs/: ENTERPRISE.md  FEATURE_DOCUMENTATION.md  KILO_INTEGRATION_PLAN.md  TEST_PLAN.md  UX-PANEL-AUDIT.md  UX-REVIEW.md  WALKTHROUGH.html  WALKTHROUGH.md  headroom-integration.md  tiered-memory-architecture.md
docs/plans/: 2026-02-25-plugin-import-design.md  2026-02-25-plugin-import-implementation.md  2026-03-03-hive-competitive-strategy.md  2026-03-16-wire-remaining-features.md  2026-03-20-automate-desktop-uat.md
docs/superpowers/plans/: 2026-03-12-project-quick-switcher.md  2026-03-15-agent-orchestration-platform.md  2026-03-15-autoresearch-engine.md  2026-03-15-openspec-integration.md  2026-03-16-cache-augmented-generation.md  2026-03-16-complete-all-gaps.md  (+1 more)
hive/: .gitignore  Cargo.toml  build.sh  verify.bat  verify.sh
hive/crates/hive_a2a/: Cargo.toml
hive/crates/hive_a2a/src/: agent_card.rs  auth.rs  bridge.rs  client.rs  config.rs  error.rs  lib.rs  remote_agent.rs  server.rs  service.rs  streaming.rs  task_handler.rs
hive/crates/hive_a2a/tests/: integration.rs
hive/crates/hive_admin/: Cargo.toml
hive/crates/hive_admin/src/: api.rs  app.rs  main.rs  ui.rs
hive/crates/hive_admin/src/tabs/: dashboard.rs  gateway.rs  mod.rs  relay.rs  sync.rs  teams.rs  users.rs
hive/crates/hive_ai/: Cargo.toml
hive/crates/hive_ai/src/: context_engine.rs  cost.rs  discovery.rs  fleet_learning.rs  knowledge_files.rs  lib.rs  local_search.rs  model_registry.rs  quick_index.rs  rag.rs  semantic_search.rs  service.rs  speculative.rs  toon.rs  types.rs
hive/crates/hive_ai/src/embeddings/: mod.rs  ollama.rs  openai.rs  types.rs
hive/crates/hive_ai/src/memory/: flush.rs  hive_memory.rs  indexer.rs  knowledge_graph.rs  mod.rs  store.rs  types.rs
hive/crates/hive_ai/src/providers/: anthropic.rs  anthropic_catalog.rs  doubao.rs  doubao_catalog.rs  gemini.rs  generic_local.rs  google_catalog.rs  groq.rs  groq_catalog.rs  hive_gateway.rs  huggingface.rs  huggingface_catalog.rs  litellm.rs  lmstudio.rs  mistral.rs  mistral_catalog.rs  mod.rs  ollama.rs  openai.rs  openai_catalog.rs  openai_sse.rs  openrouter.rs  openrouter_catalog.rs  redacting.rs  venice.rs  venice_catalog.rs  xai.rs  xai_catalog.rs  zai.rs  zai_catalog.rs
hive/crates/hive_ai/src/routing/: auto_fallback.rs  capability_router.rs  complexity_classifier.rs  mod.rs  model_router.rs  policy.rs
hive/crates/hive_ai/src/tts/: mod.rs  service.rs
hive/crates/hive_ai/tests/: embeddings_tests.rs  hive_memory_tests.rs  indexer_tests.rs  integration_test.rs  local_routing_repro.rs  memory_flush_tests.rs  memory_store_tests.rs
hive/crates/hive_app/: Cargo.toml  build.rs
hive/crates/hive_app/src/: cortex_bridge_impl.rs  cortex_runtime.rs  main.rs
hive/crates/hive_blockchain/: Cargo.toml
hive/crates/hive_blockchain/src/: erc20_bytecode.rs  evm.rs  lib.rs  rpc_config.rs  solana.rs  wallet_store.rs
hive/crates/hive_cli/: Cargo.toml
hive/crates/hive_cli/src/: api.rs  app.rs  main.rs  ui.rs
hive/crates/hive_cli/src/commands/: build_ticket.rs  chat.rs  config.rs  login.rs  mod.rs  models.rs  remote.rs  status.rs  sync.rs  tools.rs
hive/crates/hive_cloud/: Cargo.toml
hive/crates/hive_cloud/src/: admin.rs  auth.rs  billing.rs  main.rs  relay.rs
hive/crates/hive_kilo/: Cargo.toml
hive/crates/hive_kilo/src/: client.rs  config.rs  error.rs  events.rs  executor.rs  lib.rs  mcp_bridge.rs  provider.rs  pty_bridge.rs  session.rs
hive/crates/hive_remote/: Cargo.toml
hive/crates/hive_remote/examples/: local_preview.rs
hive/crates/hive_remote/src/: client.rs  daemon.rs  lib.rs  pairing.rs  protocol.rs  qr.rs  relay.rs  session.rs  web_api.rs  web_server.rs
hive/crates/hive_remote/tests/: daemon_tests.rs  integration_test.rs  pairing_tests.rs  protocol_tests.rs  qr_tests.rs  relay_tests.rs  session_tests.rs  web_api_tests.rs
hive/crates/hive_remote/web/: app.js  index.html  style.css
hive/crates/hive_ui/: Cargo.toml
hive/crates/hive_ui/src/: chat_input.rs  chat_service.rs  command_palette.rs  learning_bridge_impl.rs  lib.rs  shell_header.rs  statusbar.rs  titlebar.rs  workspace.rs
hive/crates/hive_ui/src/panels/: chat.rs
hive/crates/hive_ui/src/workspace/: account_actions.rs  activity_actions.rs  agents_actions.rs  approval_actions.rs  assistant_actions.rs  assistant_refresh.rs  chat_actions.rs  chrome.rs  context_rail.rs  costs_actions.rs  data_refresh.rs  destructive_actions.rs  file_actions.rs  history_actions.rs  kanban_actions.rs  logs_actions.rs  monitor_actions.rs  navigation.rs  network_actions.rs  overlays.rs  panel_router.rs  plugin_actions.rs  project_context.rs  prompt_library_actions.rs  quick_start_actions.rs  review_actions.rs  routing_actions.rs  run_store.rs  settings_actions.rs  shield_actions.rs  sidebar_shell.rs  skills_actions.rs  status_sync.rs  terminal_host.rs  token_launch_actions.rs  token_launch_support.rs  utility_actions.rs  workflow_actions.rs  workflow_planning.rs
hive/crates/hive_ui/tests/: test_chat_service.rs  test_files.rs  test_kanban.rs  test_logs.rs  test_monitor.rs  test_review.rs  test_routing.rs  test_settings.rs  test_sidebar.rs  test_skills.rs  test_titlebar.rs  test_token_launch.rs  test_workspace.rs
hive/scripts/: check-fast.cmd
site/: index.html
specs/001-wire-unwired-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-learning-cortex/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
website/: CNAME  account.html  index.html  login.html  pricing.html  signup.html
website/css/: style.css
website/js/: auth.js  main.js
(+309 files in other folders)
