[package]
name = "hive_ai"
version = "0.3.26"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }
hive_fs = { path = "../hive_fs" }
hive_docs = { path = "../hive_docs" }

async-trait = "0.1"
once_cell = "1"

rusqlite.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toon-format.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true
parking_lot.workspace = true
git2.workspace = true

lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

[dev-dependencies]
bytes = "1"
http = "1"
tempfile = "3"
