[package]
name = "hive_app"
version = "0.3.14"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
hive_ui = { path = "../hive_ui" }
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_fs = { path = "../hive_fs" }
hive_terminal = { path = "../hive_terminal" }
hive_agents = { path = "../hive_agents" }
hive_assistant = { path = "../hive_assistant" }
hive_blockchain = { path = "../hive_blockchain" }
hive_integrations = { path = "../hive_integrations" }
hive_learn = { path = "../hive_learn" }
hive_shield = { path = "../hive_shield" }
hive_network = { path = "../hive_network" }
hive_remote = { path = "../hive_remote" }

gpui.workspace = true
reqwest.workspace = true
axum = { version = "0.8", default-features = false }
tokio.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon = "0.21"
rust-embed.workspace = true
image.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
