[package]
name = "hive_blockchain"
version = "0.3.18"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
bs58 = "0.5"
ed25519-dalek = "2"
k256 = "0.13"
ethabi = "18"
rlp = "0.6"
sha3 = "0.10"
solana-sdk = "4.0.1"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
bincode = "1.3"

url.workspace = true

[dev-dependencies]
tempfile = "3"
