[package]
name = "hive_cli"
version = "0.3.15"
edition = "2021"
description = "Hive AI terminal client"
license = "MIT"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
hive_core = { path = "../hive_core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
