[package]
name = "hive_cloud"
version = "0.3.22"
edition = "2024"
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "9.3.0"
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper", "checkout"] }
futures = { workspace = true }
hive_remote = { path = "../hive_remote" }

[dev-dependencies]
reqwest = { workspace = true }
