[package]
name = "hive_remote"
version = "0.3.16"
edition = "2024"
license.workspace = true

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_agents = { path = "../hive_agents" }
hive_network = { path = "../hive_network" }

tokio.workspace = true
tokio-tungstenite.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures = { workspace = true }

# Crypto (QR Pairing)
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
qrcode = "0.14"
base64 = "0.22"
hex = "0.4"
dirs.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
http = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
